--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
-biopython
-numpy<2
-pandas
-scikit-learn
-tqdm
-joblib
-matplotlib
-seaborn
-fastapi
-uvicorn[standard]
-python-multipart
+fastapi==0.95.2
+uvicorn[standard]==0.22.0
+python-multipart==0.0.6
+aiofiles==23.1.0
+
+numpy==1.23.5
+scipy==1.10.1
+pandas==1.5.3
+scikit-learn==1.2.2
+joblib==1.2.0
+cloudpickle==2.2.1
+
+matplotlib==3.7.1
+pillow==9.4.0
+
+# Optional helpers often used in data pipelines
+tqdm==4.65.0
