--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,10 @@ uvicorn[standard]==0.22.0
 python-multipart==0.0.6
 aiofiles==23.1.0
 
-numpy==1.23.5
-scipy==1.10.1
-pandas==1.5.3
-scikit-learn==1.2.2
-joblib==1.2.0
-cloudpickle==2.2.1
-
-matplotlib==3.7.1
-pillow==9.4.0
-
-# Optional helpers often used in data pipelines
-tqdm==4.65.0
+# Data & ML stack - make sure numpy matches your local env
+numpy==X.Y.Z
+pandas==2.2.2
+scikit-learn==1.5.0
+matplotlib==3.9.0
+seaborn==0.13.2
+joblib==1.3.2
