--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ uvicorn[standard]==0.22.0
 python-multipart==0.0.6
 aiofiles==23.1.0
 
-# Data & ML stack - make sure numpy matches your local env
-numpy==X.Y.Z
+# Data & ML stack
+numpy==1.26.4
 pandas==2.2.2
 scikit-learn==1.5.0
 matplotlib==3.9.0
