--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ uvicorn[standard]==0.22.0
 python-multipart==0.0.6
 aiofiles==23.1.0
 
-# Data & ML stack
+# pin the numpy version that matches your saved artifacts
 numpy==1.26.4
+
 pandas==2.2.2
 scikit-learn==1.5.0
 matplotlib==3.9.0
