--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-pip==23.3.1
 fastapi==0.95.2
 uvicorn[standard]==0.22.0
 python-multipart==0.0.6
 aiofiles==23.1.0
+gunicorn==21.2.0
 
+# Data & ML stack (pin to versions with manylinux wheels for py3.11)
 numpy==1.26.4
 pandas==2.2.2
 scikit-learn==1.5.0
